Update n-gage and add npm lockfile

--- a/package.json
+++ b/package.json
@@ -17,21 +17,25 @@
   },
   "scripts": {
     "postinstall": "node bin/tools install",
-    "precommit": "node_modules/.bin/secret-squirrel",
-    "commitmsg": "node_modules/.bin/secret-squirrel-commitmsg",
-    "prepush": "make verify -j3",
     "prepare": "npx snyk protect || npx snyk protect -d || true"
   },
   "bin": {
     "n-es-tools": "bin/tools"
   },
   "devDependencies": {
-    "@financial-times/n-gage": "^3.4.2",
+    "@financial-times/n-gage": "^8.3.2",
     "npm-prepublish": "^1.2.2",
     "snyk": "^1.167.2",
     "standard": "^12.0.1"
   },
   "engines": {
     "node": "12.x"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "node_modules/.bin/secret-squirrel-commitmsg",
+      "pre-commit": "node_modules/.bin/secret-squirrel",
+      "pre-push": "make verify -j3"
+    }
   }
 }
