--- a/package.json
+++ b/package.json
@@ -17,19 +17,22 @@
   },
   "scripts": {
     "postinstall": "node bin/tools install",
-    "prepare": "npx snyk protect || npx snyk protect -d || true"
+    "prepare": "npx snyk protect || npx snyk protect -d || true",
+    "preinstall": "npm_config_yes=true npx check-engine"
   },
   "bin": {
     "n-es-tools": "bin/tools"
   },
   "devDependencies": {
     "@financial-times/n-gage": "^8.3.2",
+    "check-engines": "^1.5.0",
     "npm-prepublish": "^1.2.2",
     "snyk": "^1.167.2",
     "standard": "^12.0.1"
   },
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "npm": "7.x"
   },
   "husky": {
     "hooks": {
@@ -37,5 +40,9 @@
       "pre-commit": "node_modules/.bin/secret-squirrel",
       "pre-push": "make verify -j3"
     }
+  },
+  "volta": {
+    "node": "12.22.5",
+    "npm": "7.20.2"
   }
 }
