Improve compatibility of check-engines guard
Some shells in use (particularly in our CI and build images) do not
support the non-POSIX '[[' command, so use the more portable '[' built-in
instead.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "postinstall": "node bin/tools install",
     "prepare": "npx snyk protect || npx snyk protect -d || true",
-    "preinstall": "[[ \"$INIT_CWD\" != \"$PWD\" ]] || npm_config_yes=true npx check-engine"
+    "preinstall": "[ \"$INIT_CWD\" != \"$PWD\" ] || npm_config_yes=true npx check-engine"
   },
   "bin": {
     "n-es-tools": "bin/tools"
