--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@financial-times/n-gage": "^8.3.2",
-    "check-engines": "^1.5.0",
+    "check-engine": "^1.10.1",
     "npm-prepublish": "^1.2.2",
     "snyk": "^1.167.2",
     "standard": "^12.0.1"
