chore: tool-kit migration

--- a/package.json
+++ b/package.json
@@ -18,14 +18,22 @@
   "scripts": {
     "postinstall": "node bin/tools install",
     "prepare": "npx snyk protect || npx snyk protect -d || true",
-    "preinstall": "[ \"$INIT_CWD\" != \"$PWD\" ] || npm_config_yes=true npx check-engine"
+    "preinstall": "[ \"$INIT_CWD\" != \"$PWD\" ] || npm_config_yes=true npx check-engine",
+    "build": "dotcom-tool-kit build:local",
+    "test": "dotcom-tool-kit test:local",
+    "start": "dotcom-tool-kit run:local"
   },
   "bin": {
     "n-es-tools": "bin/tools"
   },
   "devDependencies": {
-    "@financial-times/n-gage": "^8.3.2",
+    "@dotcom-tool-kit/circleci-npm": "^2.0.9",
+    "@dotcom-tool-kit/eslint": "^2.2.1",
+    "@dotcom-tool-kit/husky-npm": "^2.2.0",
+    "@dotcom-tool-kit/secret-squirrel": "^1.0.7",
+    "@financial-times/eslint-config-next": "^6.0.0",
     "check-engine": "^1.10.1",
+    "dotcom-tool-kit": "^2.3.5",
     "npm-prepublish": "^1.2.2",
     "snyk": "^1.167.2",
     "standard": "^12.0.1"
@@ -40,9 +48,8 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "secret-squirrel-commitmsg",
-      "pre-commit": "secret-squirrel",
-      "pre-push": "make verify -j3"
+      "commit-msg": "dotcom-tool-kit git:commitmsg",
+      "pre-commit": "dotcom-tool-kit git:precommit"
     }
   }
 }
