--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@dotcom-tool-kit/eslint": "^2.2.1",
     "@dotcom-tool-kit/husky-npm": "^2.2.0",
     "@dotcom-tool-kit/secret-squirrel": "^1.0.7",
-    "@financial-times/eslint-config-next": "^6.0.0",
+    "@financial-times/eslint-config-next": "^7.0.0",
     "check-engine": "^1.10.1",
     "dotcom-tool-kit": "^2.3.5",
     "npm-prepublish": "^1.2.2",
@@ -39,7 +39,7 @@
     "standard": "^12.0.1"
   },
   "engines": {
-    "node": "14.x || 16.x",
+    "node": "16.x",
     "npm": "7.x || 8.x"
   },
   "volta": {
