chore: update to node 18

--- a/.toolkitrc.yml
+++ b/.toolkitrc.yml
@@ -11,3 +11,7 @@ options:
   '@dotcom-tool-kit/eslint':
     files:
       - '**/*.js'
+  '@dotcom-tool-kit/circleci':
+    nodeVersion:
+      - '18.16'
+      - '16.20'
